# system_code

./: .gitignore  README.md  arc_cycle.ipynb  arc_cycle.py  influence_of_trapping.ipynb  pyproject.toml  setup.py  simple_cycle.py  system.py  test.py
.github/workflows/: ci_with_install.yml
examples/: balanced_scenario.py  flf_example.py  over_produce_scenario.py  under_produce_scenario.py
src/system_code/: __init__.py  box.py  fueling_system.py  gui_app.py  launch_gui.py  plasma.py  system.py
system_code/: __init__.py  box.py  fueling_system.py  link.py  plasma.py  solver.py  system.py
tests/: test_box.py  test_plasma.py  test_system.py  test_traps.py
